# docs/swagger.json
@@ -46,7 +46,7 @@
         }
       }
     },
-    "/problem-add": {
+    "/problem-create": {
       "post": {
         "tags": [
           "管理员私有接口"
@@ -116,6 +116,59 @@
             "description": "keyword",
             "name": "keyword",
             "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    },
+    "/problem-modify": {
+      "put": {
+        "tags": [
+          "管理员私有接口"
+        ],
+        "summary": "问题修改",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "authorization",
+            "name": "authorization",
+            "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "identity",
+            "name": "identity",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "title",
+            "name": "title",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "content",
+            "name": "content",
+            "in": "formData",
+            "required": true
+          },
+          {
+            "type": "array",
+            "description": "test_cases",
+            "name": "test_cases",
+            "in": "formData",
+            "required": true
           }
         ],
         "responses": {
