# router/app.go
@@ -15,12 +15,11 @@ func Router() *gin.Engine {
 			"message": "pong",
 		})
 	})
+	//公共接口
 	//swagger配置
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	//问题列表
 	r.GET("/problem-list", GetProblem)
-	//问题创建 先检查是否为管理员，再创建问题
-	r.POST("/problem-add", middlewares.AdminCheck(), AddProblem)
 	//提交列表
 	r.GET("/submit-list", GetSubmit)
 	//用户列表
@@ -33,6 +32,13 @@ func Router() *gin.Engine {
 	r.POST("/login", Login)
 	//用户排行榜
 	r.GET("/rank-list", GetRankList)
+
+	//管理员私有接口
+	//问题创建 先检查是否为管理员，再创建问题
+	//r.Group("/admin")
+	r.POST("/problem-create", middlewares.AdminCheck(), ProblemCreate)
+	//问题修改 先检查是否为管理员，再修改问题
+	r.PUT("/problem-modify", middlewares.AdminCheck(), ProblemModify)
 
 	return r
 }
